PYIC-8593: Add event field to the query.